git-svn-id: http://svn.bse.com.uy:8000/repos/BseTienda/trunk@87 f27b152e-2885-4611-9f1b-88be06ded701